--- a/evil-web/pom.xml
+++ b/evil-web/pom.xml
@@ -6,7 +6,7 @@
 		<groupId>com.evil</groupId>
 		<artifactId>distributed-framework</artifactId>
 		<version>0.0.1-SNAPSHOT</version>
-		<relativePath/> <!-- lookup parent from repository -->
+		<relativePath>../pom.xml</relativePath>
 	</parent>
 	<groupId>com.evil</groupId>
 	<artifactId>evil-web</artifactId>
@@ -18,7 +18,7 @@
 	</properties>
 
 	<dependencies>
-		
+
 	</dependencies>
 
 	<build>
