--- a/evil-framework/pom.xml
+++ b/evil-framework/pom.xml
@@ -18,7 +18,11 @@
 	</properties>
 
 	<dependencies>
-		
+		<dependency>
+			<groupId>org.apache.zookeeper</groupId>
+			<artifactId>zookeeper</artifactId>
+			<version>3.4.8</version>
+		</dependency>
 	</dependencies>
 
 	<build>
