--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,8 @@
 	<name>evil-distributed-framework</name>
 	<description>evil-distributed-framework</description>
 
+	<packaging>pom</packaging>
+
 	<modules>
 		<module>evil-web</module>
 		<module>evil-framework</module>
@@ -28,8 +30,17 @@
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter</artifactId>
+			<exclusions>
+				<exclusion>
+					<groupId>org.springframework.boot</groupId>
+					<artifactId>spring-boot-starter-logging</artifactId>
+				</exclusion>
+			</exclusions>
 		</dependency>
-
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-web</artifactId>
+		</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
