--- a/evil-api/src/main/resources/application.properties
+++ b/evil-api/src/main/resources/application.properties
@@ -3,3 +3,6 @@ server.address=127.0.0.1
 server.port=8080
 
 registry.servers=127.0.0.1:2181
+
+
+logging.level.org.springframework.boot.autoconfigure=ERROR
