--- a/evil-api/pom.xml
+++ b/evil-api/pom.xml
@@ -28,10 +28,26 @@
 	</dependencies>
 
 	<build>
+		<finalName>evil-api.jar</finalName>
 		<plugins>
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
+			</plugin>
+			<plugin>
+				<groupId>com.spotify</groupId>
+				<artifactId>docker-maven-plugin</artifactId>
+				<version>0.4.13</version>
+				<configuration>
+					<imageName>${project.groupId}/${project.artifactId}:${project.version}</imageName>
+					<dockerDirectory>${project.build.outputDirectory}</dockerDirectory>
+					<resources>
+						<resource>
+							<directory>${project.build.directory}</directory>
+							<include>${project.build.finalName}</include>
+						</resource>
+					</resources>
+				</configuration>
 			</plugin>
 		</plugins>
 	</build>
