--- a/evil-framework/pom.xml
+++ b/evil-framework/pom.xml
@@ -6,7 +6,7 @@
 		<groupId>com.evil</groupId>
 		<artifactId>distributed-framework</artifactId>
 		<version>0.0.1-SNAPSHOT</version>
-		<relativePath/> <!-- lookup parent from repository -->
+		<relativePath>../</relativePath> <!-- lookup parent from repository -->
 	</parent>
 	<groupId>com.evil</groupId>
 	<artifactId>evil-framework</artifactId>
@@ -30,6 +30,14 @@
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-surefire-plugin</artifactId>
+				<version>2.12.4</version>
+				<configuration>
+					<skipTests>true</skipTests>
+				</configuration>
 			</plugin>
 		</plugins>
 	</build>
